@@ -1,1 +1,1 @@
-ctafconf 1.0.46(r285), 2008-09-24
+ctafconf 1.0.46(r293), 2008-10-07
